Better fixed background, standardized spacing

--- a/wedding/css/wedding-main.scss
+++ b/wedding/css/wedding-main.scss
@@ -1,5 +1,8 @@
 ---
 ---
+
+$standard_spacing: 80px;
+
 html, body {
 }
 
@@ -7,10 +10,14 @@ body {
     /*color: #EFE7DA;*/ /* Off-white */
     color: white;
     font-size: 16px;
+}
 
+.background {
+    position: fixed;
     background: url("../images/WoodPlanksBare0013_2_S.jpg") repeat;
     background-size: 640px 640px;
-    background-attachment: fixed;
+    height: 100%;
+    width: 100%;
 }
 
 .runner {
@@ -21,12 +28,14 @@ body {
     box-shadow: 0px 0px 100px #000;
     width: 90%;
     min-width: 600px;
+    position: relative;
 }
 
 .title {
     font-family: 'Fredericka the Great', cursive;
     // text-transform: uppercase;
     font-size: 80px;
+    margin-bottom: $standard_spacing;
 }
 
 .left-border, .content, .right-border {
@@ -67,7 +76,7 @@ body {
 }
 
 h1 {
-    padding-bottom: 40px;
+    // margin-bottom: $standard_spacing;
     text-align: center;
     font-size: 40px;
 }
@@ -110,7 +119,7 @@ body {
 /* Navbar */
 .navbar {
     width: 100%;
-    padding-bottom: 40px;
+    margin-bottom: $standard_spacing;
 }
 .navbar-item {
     text-align: center;
